  * Iteration over the database, using the legacy interface, now
    raises a RuntimeError if the database changes while iterating.
    http://bugs.python.org/issue2669 - gregory.p.smith
  * Create "set_private()" and "get_private()" methods for DB and DBEnv
    objects, to allow applications to link an arbitrary object to
    a DB/DBEnv. Useful for callbacks.

4.7.0:
  * Support for Berkeley DB 4.7.
  * Support "DB_ENV->log_set_config", and related flags.
  * Complete the Berkeley DB Replication Manager support:
    "DB_ENV->repmgr_site_list" and related flags.
    "DB_ENV->repmgr_stat", "DB_ENV->repmgr_stat_print" and related flags.
  * Solved an old crash when building with debug python. (Neal Norwitz)
  * Extend the testsuite driver to check also against Python 2.6 (a3).
  * Support for RPC client service.

4.6.4:
  * Basic support for Berkeley DB Replication Manager.
  * Support for a few replication calls, for benefice of Berkeley DB
    Replication Manager: "DB_ENV->rep_set_priority",
    "DB_ENV->rep_get_priority", "DB_ENV->rep_set_nsites",
    "DB_ENV->rep_get_nsites", "DB_ENV->rep_set_timeout",
    "DB_ENV->rep_get_timeout".
  * Implemented "DB_ENV->set_event_notify" and related flags.
  * Export flags related to replication timeouts.
  * Export "DBRepHandleDeadError" exception.
  * Implemented "DB_ENV->set_verbose", "DB_ENV->get_verbose"
    and related flags.
  * Implemented "DB_ENV->get_lg_max".
  * Improved performance and coverage of following tests: lock,
    threaded ConcurrentDataStore, threaded simple locks, threaded
    transactions.
  * New exported flags: "DB_LOCK_EXPIRE" and "DB_LOCK_MAXWRITE".

4.6.3:
  * Be sure all DBEnv/DB paths in the TestSuite are generated in a
    way compatible with launching the tests in multiple
    threads/processes.
  * Move all the "assert" in the TestSuite to the version in the
    framework. This is very convenient, for example, to generate the
    final report, or better automation.